--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "server": "json-server --watch db.json --port 3000",
-    "dev": "concurrently \"npm run server\" \"npm run vite\"",
+    "dev": "npm run vite",
     "vite": "vite",
     "build": "vite build",
     "lint": "eslint .",
